2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Compute and print crc32 of each packet if
	  debug_auth >= 6.

2014-09-10  Xu Han <xhan@carbonite.com>
	* packaging/rpm/amanda.spec.src: CentOS 7 packaging.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for rhel7.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4: Fix,
	  s/AMANDA_EXTENSIONS_HOOK/AMANDA_REST_EXTENSIONS/g

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/rest-extensions.m4: Fix,
	  s/EXTENSIONS_HOOK_DIR/REST_EXTENSIONS_DIR/g

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add changers URL.
	* installcheck/Amanda_Rest_Changers.pl: Typo

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4:
	  s/AMANDA_REST_HOOK/AMANDA_EXTENSIONS_HOOK/
	* config/amanda/rest-hook.m4: remove file
	* perl/Amanda/Constants.pm.in.src:
	  s/AMANDA_REST_HOOK/AMANDA_EXTENSIONS_HOOK/
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Use REST_EXTENSIONS_DIR
	* config/amanda/rest-extensions.m4: Copy of rest-hook.m4, rename
	  AMANDA_REST_HOOK to AMANDA_EXTENSIONS_HOOK, define REST_EXTENSIONS_DIR
	  instead of REST_HOOK_DIR.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_changer_list): New function.
	* common-src/conffile.h (get_changer_list): Add protoype.
	* perl/Amanda/Config.swg (get_changer_list) Swig it.
	* perl/Amanda/Config.swg: Add new message.
	* perl/Amanda/Changer.pm: Fix typo.
	* perl/Amanda/Rest/Storages.pm: Fix typo.
	* perl/Makefile.am: Add Amanda/Rest/Changers.pm
	* perl/Amanda/Rest/Changers.pm: Add new REST API
	* installcheck/Makefile.am: Add Amanda_Rest_Changers
	* installcheck/Amanda_Rest_Changers.pl: Test the new REST API.

2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix for dump to tape.