@@ -1,4 +1,9 @@
 2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer.pm (verify): Failure to read the label is not an
+	  error.
+	* perl/Amanda/Changer.pm: Add message for code 1100065.
+
+2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/security-util.c: Compute and print crc32 of each packet if
 	  debug_auth >= 6.
 
